[package]
name = "testapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp_wasi = "0.3.3"
tokio_wasi = { version = "1.25", features = ["full"] }
bytes = "1"
serde_json = "1.0.93"
serde = {version = "1.0", features = ["derive"] }
anyhow = "1.0.69"
thiserror = "1.0.38"
sqlx_wasi = { version="0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
jwt-compact = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
